<resources>
    <string name="app_name">Projeto_Integrador</string>
    <string name="itemMovieTitle">itemMovieTitle</string>
    <string name="search_for_movie_hint_text">Pesquisar por um filme...</string>
    <string name="an_error_occurred">O sistema falhou</string>
    <string name="no_more_movies">Você chegou ao final da lista</string>
    <string name="all_movies_tab">Todos os filmes</string>
    <string name="favorite_tab">Favoritos</string>
    <string name="search_mode">Modo pesquisa</string>
    <string name="go_back_to_the_start">Voltar ao início</string>
    <string name="user_rating_description">Avaliação\ndos usuários</string>
    <string name="synopsis">Sinopse</string>
    <string name="certification">PG-13</string>
    <string name="system_failure">O sistema falhou</string>
    <string name="system_failure_subtitle">Por algum motivo, não foi possível processar com essa solicitação. Por favor, tente novamente.</string>
    <string name="try_again">Tente novamente</string>
    <string name="no_search_results_title">Esse filme não existe</string>
    <string name="no_search_results_description">Não conseguimos encontrar o filme que voce procura.\nPor favor, refaça sua busca.</string>
</resources>