<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_all_movies_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/background_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchEditText"
        android:layout_width="@dimen/search_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:focusedByDefault="false"
        android:gravity="top"
        android:hint="@string/search_for_movie_hint_text"
        app:layout_constraintBottom_toBottomOf="@id/searchImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchImageView"
        app:layout_constraintTop_toTopOf="@id/searchImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/searchImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:scaleType="fitXY"
        android:src="@drawable/search_image_view"
        app:layout_constraintEnd_toStartOf="@+id/searchEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/allMoviesTabTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/all_movies_tab"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/favoriteMoviesTabTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:text="@string/favorite_tab"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditText" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_all_movies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/allMoviesTabTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>