<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/errorLayout"
    android:backgroundTint="@color/background_color">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/error"
        android:layout_marginBottom="@dimen/medium"
        app:layout_constraintBottom_toTopOf="@+id/systemFailure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/systemFailure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_failure"
        android:textSize="@dimen/large_sp"
        android:textColor="@color/titles_selected_text_color"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:text="@string/system_failure_subtitle"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/titles_selected_text_color"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/systemFailure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/systemFailure" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/closeErrorDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_dialog_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tryAgainButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/try_again"
        android:layout_marginBottom="@dimen/medium"
        android:textColor="@color/tab_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_begin="491dp" />-->


</androidx.constraintlayout.widget.ConstraintLayout>