<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/detailsTopBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/detailsPosterImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_details_height"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/poster_sample">

            </androidx.appcompat.widget.AppCompatImageView>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detailsRatingImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/medium"
            android:src="@drawable/rectangle_8"
            android:layout_marginTop="@dimen/movie_details_image_view_margin_top"
            app:layout_constraintBottom_toBottomOf="@+id/detailsTopBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detailsTopBarLayout"
            app:layout_constraintVertical_bias="0.501">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detailsStarRatingImageView"
            android:layout_width="@dimen/details_rating_image_width"
            android:layout_height="@dimen/details_rating_image_width"
            android:layout_marginStart="@dimen/xLlarge"
            android:layout_marginBottom="@dimen/small"
            android:elevation="@dimen/medium"
            android:src="@drawable/star_rating"
            app:layout_constraintBottom_toBottomOf="@+id/detailsRatingImageView"
            app:layout_constraintStart_toStartOf="@+id/detailsRatingImageView"
            app:layout_constraintTop_toTopOf="@+id/detailsRatingImageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detailsFavoriteImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/medium"
            android:src="@drawable/heart_button_not_pressed"
            app:layout_constraintBottom_toBottomOf="@+id/detailsMovieTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/detailsMovieTitleTextView"
            app:layout_constraintStart_toStartOf="@+id/detailsStarRatingImageView"
            app:layout_constraintTop_toTopOf="@+id/detailsMovieTitleTextView">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsRatingTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginBottom="@dimen/xlarge"
            android:elevation="@dimen/medium"
            android:fontFamily="@font/titles"
            android:textColor="@color/titles_selected_text_color"
            android:textSize="@dimen/small_sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/detailsRatingImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detailsStarRatingImageView"
            app:layout_constraintTop_toTopOf="@+id/detailsRatingImageView"
            tools:text="81%" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsRatingDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/xxxsmall"
            android:elevation="@dimen/medium"
            android:fontFamily="@font/titles"
            android:text="@string/user_rating_description"
            android:textColor="@color/titles_selected_text_color"
            android:textSize="@dimen/small_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/detailsRatingTextView"
            app:layout_constraintTop_toBottomOf="@+id/detailsRatingTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsMovieTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/medium"
            android:fontFamily="@font/titles"
            android:textColor="@color/titles_selected_text_color"
            android:textSize="@dimen/large_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/detailsFavoriteImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsRatingImageView"
            tools:text="Filmezinho">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsYearTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small"
            android:fontFamily="@font/titles"
            android:textAlignment="center"
            android:textColor="@color/titles_selected_text_color"
            android:textSize="@dimen/small_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/detailsMovieTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/detailsMovieTitleTextView"
            tools:text="Filmezinho">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsPGTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/small"
            android:fontFamily="@font/titles"
            android:text="@string/certification"
            android:textAlignment="center"
            android:textColor="@color/titles_selected_text_color"
            android:textSize="@dimen/small_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/detailsYearTextView"
            app:layout_constraintTop_toTopOf="@+id/detailsYearTextView"
            tools:text="Filmezinho">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsRuntimeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/small"
            android:fontFamily="@font/titles"
            android:textAlignment="center"
            android:textColor="@color/titles_selected_text_color"
            android:textSize="@dimen/small_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/detailsPGTextView"
            app:layout_constraintTop_toTopOf="@+id/detailsYearTextView"
            tools:text="Filmezinho">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailsGenre"
            android:layout_width="0dp"
            android:layout_height="@dimen/xxlarge"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/detailsYearTextView"
            app:layout_constraintTop_toBottomOf="@+id/detailsYearTextView"
            tools:listitem="@layout/details_genre_recycler_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsSynopsisTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/medium"
            android:fontFamily="@font/titles"
            android:text="@string/synopsis"
            android:textAlignment="center"
            android:textColor="@color/titles_selected_text_color"
            android:textSize="@dimen/medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsGenre"
            tools:text="Sinopse">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsOverviewTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/xsmall"
            android:fontFamily="@font/titles"
            android:textColor="@color/titles_selected_text_color"
            android:textSize="@dimen/small_sp"
            app:layout_constraintStart_toStartOf="@id/detailsSynopsisTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/detailsSynopsisTitleTextView"
            tools:text="American car designer Carroll Shelby and driver Kn Miles battle corporate interference and the laws of physics to build a revolutionary race car for Ford in order.">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsCastTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/medium"
            android:fontFamily="@font/titles"
            android:text="Elenco"
            android:textAlignment="center"
            android:textColor="@color/titles_selected_text_color"
            android:textSize="@dimen/medium_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsOverviewTextView"
            tools:text="Elenco">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/castAndCrewRecyclerView"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xsmall"
            android:clipToPadding="false"
            android:descendantFocusability="blocksDescendants"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/medium"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/detailsCastTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/detailsCastTitleTextView"
            tools:listitem="@layout/cast_and_crew_recycler_view" />

        <ProgressBar
            android:id="@+id/movieDetailsProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>